src/ovraudio/sys.rs

extern "C" {
    /// Destroy a previously created audio context.
///
/// \param[in] Context a valid audio context
/// \see ovrAudio_CreateContext
///
    pub fn ovrAudio_DestroyContext(Context: ovrAudioContext);
}
extern "C" {
    /// Enable/disable options in the audio context.
///
/// \param Context context to use
/// \param What specific property to enable/disable
/// \param Enable 0 to disable, 1 to enable
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_Enable(Context: ovrAudioContext, What: ovrAudioEnable,
                           Enable: ::std::os::raw::c_int) -> ovrResult;
}
extern "C" {
    /// Query option status in the audio context.
///
/// \param Context context to use
/// \param What specific property to query
/// \param pEnabled addr of variable to receive the queried property status
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_IsEnabled(Context: ovrAudioContext, What: ovrAudioEnable,
                              pEnabled: *mut ::std::os::raw::c_int)
     -> ovrResult;
}
extern "C" {
    /// Set HRTF interpolation method.
///
/// NOTE: Internal use only!
/// \param Context context to use
/// \param InterpolationMethod method to use
///
    pub fn ovrAudio_SetHRTFInterpolationMethod(Context: ovrAudioContext,
                                               InterpolationMethod:
                                                   ovrAudioHRTFInterpolationMethod)
     -> ovrResult;
}
extern "C" {
    /// Get HRTF interpolation method.
///
/// NOTE: Internal use only!
/// \param Context context to use
/// \param InterpolationMethod method to use
///
    pub fn ovrAudio_GetHRTFInterpolationMethod(Context: ovrAudioContext,
                                               pInterpolationMethod:
                                                   *mut ovrAudioHRTFInterpolationMethod)
     -> ovrResult;
}
/// Box room parameters used by ovrAudio_SetSimpleBoxRoomParameters
///
/// \see ovrAudio_SetSimpleBoxRoomParameters
#[repr(C)]
#[derive(Debug, Copy)]
pub struct _ovrAudioBoxRoomParameters {
    ///< Size of struct
    pub brp_Size: u32,
    ///< Reflection values (0..0.95)
    pub brp_ReflectLeft: f32,
    ///< Reflection values (0..0.95)
    pub brp_ReflectRight: f32,
    ///< Reflection values (0..0.95)
    pub brp_ReflectUp: f32,
    ///< Reflection values (0..0.95)
    pub brp_ReflectDown: f32,
    ///< Reflection values (0..0.95)
    pub brp_ReflectBehind: f32,
    ///< Reflection values (0..0.95)
    pub brp_ReflectFront: f32,
    ///< Size of box in meters
    pub brp_Width: f32,
    ///< Size of box in meters
    pub brp_Height: f32,
    ///< Size of box in meters
    pub brp_Depth: f32,
}
#[test]
fn bindgen_test_layout__ovrAudioBoxRoomParameters() {
    assert_eq!(::std::mem::size_of::<_ovrAudioBoxRoomParameters>() , 40usize ,
               concat ! (
               "Size of: " , stringify ! ( _ovrAudioBoxRoomParameters ) ));
    assert_eq! (::std::mem::align_of::<_ovrAudioBoxRoomParameters>() , 4usize
                , concat ! (
                "Alignment of " , stringify ! ( _ovrAudioBoxRoomParameters )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) . brp_Size
                as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! ( brp_Size )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_ReflectLeft as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! (
                brp_ReflectLeft ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_ReflectRight as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! (
                brp_ReflectRight ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_ReflectUp as * const _ as usize } , 12usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! (
                brp_ReflectUp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_ReflectDown as * const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! (
                brp_ReflectDown ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_ReflectBehind as * const _ as usize } , 20usize , concat !
                (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! (
                brp_ReflectBehind ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_ReflectFront as * const _ as usize } , 24usize , concat !
                (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! (
                brp_ReflectFront ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_Width as * const _ as usize } , 28usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! ( brp_Width
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_Height as * const _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! ( brp_Height
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const _ovrAudioBoxRoomParameters ) ) .
                brp_Depth as * const _ as usize } , 36usize , concat ! (
                "Alignment of field: " , stringify ! (
                _ovrAudioBoxRoomParameters ) , "::" , stringify ! ( brp_Depth
                ) ));
}
impl Clone for _ovrAudioBoxRoomParameters {
    fn clone(&self) -> Self { *self }
}
pub type ovrAudioBoxRoomParameters = _ovrAudioBoxRoomParameters;
extern "C" {
    /// Set box room parameters for reverberation.
///
/// These parameters are used for reverberation/early reflections if 
/// ovrAudioEnable_SimpleRoomModeling is enabled.
///
/// Width/Height/Depth default is 11/10/9m
/// Reflection constants default to 0.25
///
/// \param Context[in] context to use
/// \param Parameters[in] pointer to ovrAudioBoxRoomParameters describing box
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudioBoxRoomParameters
/// \see ovrAudio_Enable
///
    pub fn ovrAudio_SetSimpleBoxRoomParameters(Context: ovrAudioContext,
                                               Parameters:
                                                   *const ovrAudioBoxRoomParameters)
     -> ovrResult;
}
extern "C" {
    /// Get box room parameters for current reverberation.
///
/// \param Context[in] context to use
/// \param Parameters[in] pointer to returned ovrAudioBoxRoomParameters box description
/// \return Returns an ovrResult indicating success or failure
/// \see ovrAudioBoxRoomParameters
/// \see ovrAudio_Enable
///
    pub fn ovrAudio_GetSimpleBoxRoomParameters(Context: ovrAudioContext,
                                               Parameters:
                                                   *mut ovrAudioBoxRoomParameters)
     -> ovrResult;
}
extern "C" {
    /// Sets the listener's pose state as vectors
///
/// If this is not set then the listener is always assumed to be facing into
/// the screen (0,0,-1) at location (0,0,0) and that all spatialized sounds
/// are in listener-relative coordinates.
///
/// \param Context[in] context to use
/// \param PositionX[in] X position of listener on X axis
/// \param PositionY[in] Y position of listener on X axis
/// \param PositionZ[in] Z position of listener on X axis
/// \param ForwardX[in] X component of listener forward vector
/// \param ForwardY[in] Y component of listener forward vector
/// \param ForwardZ[in] Z component of listener forward vector
/// \param UpX[in] X component of listener up vector
/// \param UpY[in] Y component of listener up vector
/// \param UpZ[in] Z component of listener up vector
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_SetListenerVectors(Context: ovrAudioContext,
                                       PositionX: f32, PositionY: f32,
                                       PositionZ: f32, ForwardX: f32,
                                       ForwardY: f32, ForwardZ: f32, UpX: f32,
                                       UpY: f32, UpZ: f32) -> ovrResult;
}
extern "C" {
    /// Gets the listener's pose state as vectors
///
/// \param Context[in] context to use
/// \param pPositionX[in]: addr of X position of listener on X axis
/// \param pPositionY[in]: addr of Y position of listener on X axis
/// \param pPositionZ[in]: addr of Z position of listener on X axis
/// \param pForwardX[in]: addr of X component of listener forward vector
/// \param pForwardY[in]: addr of Y component of listener forward vector
/// \param pForwardZ[in]: addr of Z component of listener forward vector
/// \param pUpX[in]: addr of X component of listener up vector
/// \param pUpY[in]: addr of Y component of listener up vector
/// \param pUpZ[in]: addr of Z component of listener up vector
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_GetListenerVectors(Context: ovrAudioContext,
                                       pPositionX: *mut f32,
                                       pPositionY: *mut f32,
                                       pPositionZ: *mut f32,
                                       pForwardX: *mut f32,
                                       pForwardY: *mut f32,
                                       pForwardZ: *mut f32, pUpX: *mut f32,
                                       pUpY: *mut f32, pUpZ: *mut f32)
     -> ovrResult;
}
extern "C" {
    /// Sets the listener's pose state
///
/// If this is not set then the listener is always assumed to be facing into
/// the screen (0,0,-1) at location (0,0,0) and that all spatialized sounds
/// are in listener-relative coordinates.
///
/// \param Context[in] context to use
/// \param PoseState[in] listener's pose state as returned by LibOVR
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_SetListenerPoseStatef(Context: ovrAudioContext,
                                          PoseState: *const ovrPoseStatef)
     -> ovrResult;
}
extern "C" {
    /// Reset an audio source's state.
///
/// Sometimes you need to reset an audio source's internal state due to a change
/// in the incoming sound or parameters.  For example, removing any reverb
/// tail since the incoming waveform has been swapped.
///
/// \param Context context to use
/// \param Sound index of sound (0..NumSources-1)
/// \return Returns an ovrResult indicating success or failure
///
    pub fn ovrAudio_ResetAudioSource(Context: ovrAudioContext,
                                     Sound: ::std::os::raw::c_int)
     -> ovrResult;
}
